tests/solidity-semantic-tests/out/errors/via_import/C.approval.teal
#pragma version 10
#pragma typetrack false

// /tmp/multisource_1zyg3b24/s3.sol.C.approval_program() -> uint64:
main:
    intcblock 1 0
    pushint 4096
    bzero
    dup
    store 5
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn ApplicationID
    bnz main_after_if_else@2
    intc_0 // 1
    return

main_after_if_else@2:
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0xb13faba1 0x598118aa 0x1db3c594 // method "x()void", method "y()void", method "z()void"
    txna ApplicationArgs 0
    match x y z
    err


// /tmp/multisource_1zyg3b24/s3.sol.C.x[routing]() -> void:
x:
    txn GroupIndex
    bz x_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

x_ternary_merge@4:
    !
    assert // not payable
    err // E

x_ternary_false@3:
    intc_1 // 0
    b x_ternary_merge@4


// /tmp/multisource_1zyg3b24/s3.sol.C.y[routing]() -> void:
y:
    txn GroupIndex
    bz y_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

y_ternary_merge@4:
    !
    assert // not payable
    err // E

y_ternary_false@3:
    intc_1 // 0
    b y_ternary_merge@4


// /tmp/multisource_1zyg3b24/s3.sol.C.z[routing]() -> void:
z:
    txn GroupIndex
    bz z_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

z_ternary_merge@4:
    !
    assert // not payable
    err // E

z_ternary_false@3:
    intc_1 // 0
    b z_ternary_merge@4
